# python-ddd-base

./: README.md  pyproject.toml
example/di/: __init__.py  sample.db3
example/domain/: __init__.py
example/domain/user/: IUserRepo.py  __init__.py
example/infrastructures/mock/: __init__.py
example/infrastructures/sqlite/: __init__.py
example/presentations/web/fastapi/: app.py  user.py
example/presentations/web/next/: .eslintrc.js  Dockerfile  next.config.js  package.json
example/presentations/web/next/openapi/: api.ts  base.ts  configuration.ts  index.ts
example/presentations/web/next/pages/: _app.js  index.tsx
example/usecase/: __init__.py
