[tool.poetry]
name = "python-ddd-base"
version = "0.1.0"
description = "Example project for DDD"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
inject = "^4.3.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
